[project]
name = "reviewlens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "gradio>=6.16.0",
    "lightgbm>=4.6.0",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "shap>=0.51.0",
]
